--- a/index.html
+++ b/index.html
@@ -61,7 +61,17 @@
             .print\:hidden { display: none !important; }
             body > div { min-height: auto !important; padding: 0 !important; }
             .print-header { display: block !important; text-align: center; margin-bottom: 20px; }
-            main { padding: 0; }
+            
+            /* --- SOLUCIÓN APLICADA AQUÍ --- */
+            main { 
+                padding: 0; 
+                visibility: visible !important; /* <--- Esto fuerza al ticket individual a mostrarse */
+                position: absolute;
+                left: 0;
+                top: 0;
+            }
+            /* ---------------------------- */
+            
             table { width: 100%; border-collapse: collapse; }
             /* Mostrar todas las columnas relevantes para impresión */
             th:nth-child(3), td:nth-child(3) { display: table-cell; width: 15%; text-align: center; } /* P. UNIT. */
@@ -1530,7 +1540,7 @@ window.addEventListener("load", () => {
     document.querySelectorAll("[data-lucide]").forEach(el => {
       const icon = el.getAttribute("data-lucide");
       if (svgMap[icon]) {
-        el.outerHTML = svgMap[icon].replace('<svg ', `<svg class="\${el.className}" `);
+        el.outerHTML = svgMap[icon].replace('<svg ', `<svg class="${el.className}" `);
       }
     });
   }
