--- a/index.html
+++ b/index.html
@@ -4,111 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AriAuto App</title>
-    <script src="https://cdn.tailwindcss.com">
-// Eventos del modal de ticket sin guardar
-document.getElementById('btn-save-continue').addEventListener('click', () => {
-    if (typeof saveCurrentTicket === "function") {
-        saveCurrentTicket();
-    }
-    if (ticketToLoad) {
-        appState.cart = JSON.parse(JSON.stringify(ticketToLoad.cart));
-        appState.total = ticketToLoad.total;
-        updateCartTable();
-        hideModal('#saved-tickets-modal');
-        showMessage("Ticket cargado correctamente.", "success");
-    }
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-document.getElementById('btn-ignore-continue').addEventListener('click', () => {
-    if (ticketToLoad) {
-        appState.cart = JSON.parse(JSON.stringify(ticketToLoad.cart));
-        appState.total = ticketToLoad.total;
-        updateCartTable();
-        hideModal('#saved-tickets-modal');
-        showMessage("Ticket cargado correctamente.", "success");
-    }
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-document.getElementById('btn-cancel-continue').addEventListener('click', () => {
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-</script>
-    <script src="https://unpkg.com/lucide@latest">
-// Eventos del modal de ticket sin guardar
-document.getElementById('btn-save-continue').addEventListener('click', () => {
-    if (typeof saveCurrentTicket === "function") {
-        saveCurrentTicket();
-    }
-    if (ticketToLoad) {
-        appState.cart = JSON.parse(JSON.stringify(ticketToLoad.cart));
-        appState.total = ticketToLoad.total;
-        updateCartTable();
-        hideModal('#saved-tickets-modal');
-        showMessage("Ticket cargado correctamente.", "success");
-    }
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-document.getElementById('btn-ignore-continue').addEventListener('click', () => {
-    if (ticketToLoad) {
-        appState.cart = JSON.parse(JSON.stringify(ticketToLoad.cart));
-        appState.total = ticketToLoad.total;
-        updateCartTable();
-        hideModal('#saved-tickets-modal');
-        showMessage("Ticket cargado correctamente.", "success");
-    }
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-document.getElementById('btn-cancel-continue').addEventListener('click', () => {
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-</script>
-    <script src="https://cdn.sheetjs.com/xlsx-0.20.2/package/dist/xlsx.full.min.js">
-// Eventos del modal de ticket sin guardar
-document.getElementById('btn-save-continue').addEventListener('click', () => {
-    if (typeof saveCurrentTicket === "function") {
-        saveCurrentTicket();
-    }
-    if (ticketToLoad) {
-        appState.cart = JSON.parse(JSON.stringify(ticketToLoad.cart));
-        appState.total = ticketToLoad.total;
-        updateCartTable();
-        hideModal('#saved-tickets-modal');
-        showMessage("Ticket cargado correctamente.", "success");
-    }
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-document.getElementById('btn-ignore-continue').addEventListener('click', () => {
-    if (ticketToLoad) {
-        appState.cart = JSON.parse(JSON.stringify(ticketToLoad.cart));
-        appState.total = ticketToLoad.total;
-        updateCartTable();
-        hideModal('#saved-tickets-modal');
-        showMessage("Ticket cargado correctamente.", "success");
-    }
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-document.getElementById('btn-cancel-continue').addEventListener('click', () => {
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-</script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="https://cdn.sheetjs.com/xlsx-0.20.2/package/dist/xlsx.full.min.js"></script>
     <style>
         /* Estilos personalizados para la animación del logo y impresión */
         @keyframes flameRise {
@@ -1597,11 +1495,15 @@ document.getElementById('btn-cancel-continue').addEventListener('click', () => {
     // 🔹 Normalizar texto: quitar acentos, espacios y comas
     transcript = transcript
         .normalize("NFD")                 // separa acentos
-        .replace(/[\u0300-\u036f]/g, "")        // elimina marcas de acento
+        .replace(/[\u0300-\u036f]/g, "")  // elimina marcas de acento
         .replace(/[ ,]/g, "")             // elimina espacios y comas
         .toLowerCase();                   // opcional: todo minúsculas
 
     dom.searchInput.value = transcript;
+
+    // 🔥 Forzar búsqueda automática para mostrar sugerencias
+    appState.searchText = transcript;
+    performSearch();
 };
                 
                 recognition.onend = () => {
@@ -1698,41 +1600,7 @@ document.getElementById('btn-cancel-continue').addEventListener('click', () => {
             // --- FIN DE LA CORRECCIÓN ---
             dom.searchInput.focus();
         };
-    
-// Eventos del modal de ticket sin guardar
-document.getElementById('btn-save-continue').addEventListener('click', () => {
-    if (typeof saveCurrentTicket === "function") {
-        saveCurrentTicket();
-    }
-    if (ticketToLoad) {
-        appState.cart = JSON.parse(JSON.stringify(ticketToLoad.cart));
-        appState.total = ticketToLoad.total;
-        updateCartTable();
-        hideModal('#saved-tickets-modal');
-        showMessage("Ticket cargado correctamente.", "success");
-    }
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-document.getElementById('btn-ignore-continue').addEventListener('click', () => {
-    if (ticketToLoad) {
-        appState.cart = JSON.parse(JSON.stringify(ticketToLoad.cart));
-        appState.total = ticketToLoad.total;
-        updateCartTable();
-        hideModal('#saved-tickets-modal');
-        showMessage("Ticket cargado correctamente.", "success");
-    }
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-document.getElementById('btn-cancel-continue').addEventListener('click', () => {
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-</script>
+    </script>
 
 <script>
 window.addEventListener("load", () => {
@@ -1760,64 +1628,7 @@ window.addEventListener("load", () => {
     });
   }
 });
-
-// Eventos del modal de ticket sin guardar
-document.getElementById('btn-save-continue').addEventListener('click', () => {
-    if (typeof saveCurrentTicket === "function") {
-        saveCurrentTicket();
-    }
-    if (ticketToLoad) {
-        appState.cart = JSON.parse(JSON.stringify(ticketToLoad.cart));
-        appState.total = ticketToLoad.total;
-        updateCartTable();
-        hideModal('#saved-tickets-modal');
-        showMessage("Ticket cargado correctamente.", "success");
-    }
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-document.getElementById('btn-ignore-continue').addEventListener('click', () => {
-    if (ticketToLoad) {
-        appState.cart = JSON.parse(JSON.stringify(ticketToLoad.cart));
-        appState.total = ticketToLoad.total;
-        updateCartTable();
-        hideModal('#saved-tickets-modal');
-        showMessage("Ticket cargado correctamente.", "success");
-    }
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
-document.getElementById('btn-cancel-continue').addEventListener('click', () => {
-    document.getElementById('unsaved-ticket-modal').classList.add('hidden');
-    ticketToLoad = null;
-});
-
 </script>
-
-
-<!-- Modal para ticket sin guardar -->
-<div id="unsaved-ticket-modal" class="fixed inset-0 hidden bg-black bg-opacity-50 flex items-center justify-center z-50">
-  <div class="bg-white rounded-2xl shadow-lg p-6 w-96 text-center">
-    <h2 class="text-lg font-bold text-gray-800 mb-2">Ticket sin guardar</h2>
-    <p class="text-sm text-gray-600 mb-4">
-      Tienes un ticket abierto sin guardar.<br>
-      ¿Quieres guardarlo antes de continuar?
-    </p>
-    <div class="flex justify-center gap-3">
-      <button id="btn-save-continue" class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700">
-        Guardar y continuar
-      </button>
-      <button id="btn-ignore-continue" class="px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700">
-        Ignorar
-      </button>
-      <button id="btn-cancel-continue" class="px-4 py-2 bg-gray-400 text-white rounded-lg hover:bg-gray-500">
-        Cancelar
-      </button>
-    </div>
-  </div>
-</div>
 
 </body>
 </html>
