--- a/index.html
+++ b/index.html
@@ -261,19 +261,19 @@
             </div>
 
             <div class="overflow-y-auto flex-grow">
-                <table class="min-w-full divide-y divide-gray-200">
+                <table class="table-auto w-full divide-y divide-gray-200">
                     <thead class="bg-gray-50 sticky top-0">
                         <tr>
-                            <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Ref.</th>
-                            <th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Fecha/Hora</th>
-<th class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Cliente</th>
-                            <th class="px-3 py-2 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">Monto</th>
-                            <th class="px-3 py-2 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Acciones</th>
+                            <th class="px-2 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Ref.</th>
+                            <th class="px-2 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Fecha/Hora</th>
+<th class="px-2 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Cliente</th>
+                            <th class="px-2 py-2 text-right text-xs font-medium text-gray-500 uppercase tracking-wider">Monto</th>
+                            <th class="px-2 py-2 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Acciones</th>
                         </tr>
                     </thead>
-                    <tbody id="saved-tickets-body" class="bg-white divide-y divide-gray-200">
+                    <tbody id="saved-tickets-body" class="bg-white divide-y divide-gray-200 text-sm">
                         <tr id="empty-saved-tickets-row">
-                            <td colspan="4" class="py-4 text-center text-gray-500">No hay tickets cerrados.</td>
+                            <td colspan="4" class="py-4 text-center text-gray-500">No hay tickets cerrados.</div></td>
                         </tr>
                     </tbody>
                 </table>
@@ -1010,18 +1010,18 @@ function confirmClearCart() {
                     
                     return `
                         <tr class="hover:bg-gray-50 transition duration-150">
-                            <td class="px-3 py-2 text-sm font-bold text-gray-800">${ticket.ref}</td>
-                            <td class="px-3 py-2 text-sm text-gray-600 whitespace-nowrap">${dateStr} ${timeStr}</td>
-                            <td class="px-3 py-2 text-sm text-gray-700 uppercase">${customerName}</td>
-<td class="px-3 py-2 text-sm font-extrabold text-right text-green-700">$${ticket.total.toFixed(2)}</td>
-                            <td class="px-3 py-2 text-center flex justify-center space-x-2">
+                            <td class="px-2 py-2 text-sm font-bold text-gray-800">${ticket.ref}</td>
+                            <td class="px-2 py-2 text-sm text-gray-600 whitespace-nowrap">${dateStr} ${timeStr}</td>
+                            <td class="px-2 py-2 text-sm text-gray-700 uppercase">${customerName}</td>
+<td class="px-2 py-2 text-sm font-extrabold text-right text-green-700">$${ticket.total.toFixed(2)}</td>
+                            <td class="px-2 py-2 text-center"><div class="flex flex-wrap justify-center gap-1">
                                 <button onclick="loadSavedTicket('${ticket.id}')" class="text-white bg-indigo-500 hover:bg-indigo-600 p-1 rounded-md shadow-sm text-xs font-semibold">
                                     CARGAR
                                 </button>
                                 <button onclick="deleteSavedTicket('${ticket.id}')" class="text-white bg-red-500 hover:bg-red-600 p-1 rounded-md shadow-sm text-xs font-semibold">
                                     X
                                 </button>
-                            </td>
+                            </div></td>
                         </tr>
                     `;
                 }).join('');
@@ -1057,11 +1057,11 @@ function confirmClearCart() {
                     <table class="min-w-full table-auto border-collapse">
                         <thead>
                             <tr class="bg-gray-100 border-b-2 border-gray-800 text-left text-xs font-semibold uppercase tracking-wider text-gray-700">
-                                <th class="px-3 py-2 w-10">No.</th>
-                                <th class="px-3 py-2">CÓDIGO</th> 
-                                <th class="px-3 py-2 text-center">P. UNIT.</th>
-                                <th class="px-3 py-2 text-center">CANT.</th> 
-                                <th class="px-3 py-2 text-right">SUBTOTAL</th>
+                                <th class="px-2 py-2 w-10">No.</th>
+                                <th class="px-2 py-2">CÓDIGO</th> 
+                                <th class="px-2 py-2 text-center">P. UNIT.</th>
+                                <th class="px-2 py-2 text-center">CANT.</th> 
+                                <th class="px-2 py-2 text-right">SUBTOTAL</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -1085,7 +1085,7 @@ function confirmClearCart() {
                             </td>
                             <td class="px-3 py-1 text-center font-semibold text-gray-800 text-sm">$${price.toFixed(2)}</td>
                             <td class="px-3 py-1 text-center font-semibold text-gray-800 text-sm">${quantity.toFixed(2)}</td>
-                            <td class="px-3 py-1 font-bold text-right text-sky-600 text-sm">$${subtotal}</td>
+                            <td class="px-3 py-1 font-bold text-right text-sky-600 text-sm">$${subtotal}</div></td>
                         </tr>
                     `;
                 });
@@ -1216,8 +1216,8 @@ function confirmClearCart() {
 
                     return `
                         <tr class="border-b hover:bg-gray-50 transition duration-150">
-                            <td class="px-3 py-2 text-center text-gray-600 font-bold w-10">${index + 1}</td>
-<td class="px-3 py-2 text-center">
+                            <td class="px-2 py-2 text-center text-gray-600 font-bold w-10">${index + 1}</td>
+<td class="px-2 py-2 text-center">
     <input 
         type="checkbox" 
         class="partial-sum-checkbox w-4 h-4 text-indigo-600 align-middle rounded"
@@ -1226,7 +1226,7 @@ function confirmClearCart() {
     />
 </td>
 
-                            <td class="px-3 py-2 text-gray-800 font-medium">
+                            <td class="px-2 py-2 text-gray-800 font-medium">
                                 <p class="text-sm font-mono font-bold ${isManual ? 'text-red-600' : 'text-gray-900'}">
                                     ${item.code}
                                     ${isManual ? '<span class="text-xs ml-1 text-red-400 print:hidden">(Manual)</span>' : ''}
@@ -1235,10 +1235,10 @@ function confirmClearCart() {
                                     <span class="truncate">${item.make}</span>
                                 </p>
                             </td>
-                            <td class="px-3 py-2 text-center font-semibold hidden md:table-cell print:table-cell">
+                            <td class="px-2 py-2 text-center font-semibold hidden md:table-cell print:table-cell">
                                 <span class="${isManual ? 'text-red-500' : 'text-gray-800'}">$${price.toFixed(2)}</span>
                             </td>
-                            <td class="px-3 py-2 text-center print:block"> 
+                            <td class="px-2 py-2 text-center print:block"> 
                                 <span class="hidden print:inline text-sm font-bold text-gray-800">${quantity.toFixed(2)}</span>
                                 <div class="flex items-center justify-center space-x-2 print:hidden">
                                     <input
@@ -1260,7 +1260,7 @@ function confirmClearCart() {
                                     </button>
                                 </div>
                             </td>
-                            <td class="px-3 py-2 font-bold text-right text-sky-600">$${subtotal}</td>
+                            <td class="px-2 py-2 font-bold text-right text-sky-600">$${subtotal}</div></td>
                         </tr>
                     `;
                 }).join('');
