--- a/index.html
+++ b/index.html
@@ -843,7 +843,6 @@ function confirmClearCart() {
             render();
         }
 
-
         function handleManualPriceConfirm(code, price) {
             const validatedPrice = parseFloat(price);
             
@@ -1669,6 +1668,96 @@ window.addEventListener("load", () => {
   }
 });
 </script>
+
+
+<!-- INICIO: Modal y validación de nombre de XLSX (dd-mm-yyyy sin extensión) -->
+<div id="wrong-db-modal" class="fixed inset-0 bg-black bg-opacity-50 items-center justify-center z-50 p-4 hidden print:hidden">
+  <div class="bg-white rounded-xl shadow-2xl p-6 w-full max-w-sm transform transition-all">
+    <div class="flex items-center text-red-600 mb-4">
+      <i data-lucide="alert-triangle" class="w-8 h-8 mr-3 text-yellow-500"></i>
+      <h3 class="text-lg font-bold text-gray-800">Archivo XLSX Incorrecto</h3>
+    </div>
+    <p class="text-gray-700 mb-6">
+      El archivo de base de datos no corresponde a la fecha actual (<span id="expected-date"></span>).
+    </p>
+    <div class="flex justify-end space-x-3">
+      <button id="update-db-btn" class="px-4 py-2 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition duration-150 shadow-md">
+        Actualizar Base de Datos
+      </button>
+      <button id="continue-db-btn" class="px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 transition duration-150 shadow-md">
+        Continuar con la Misma
+      </button>
+    </div>
+  </div>
+</div>
+
+<script>
+/**
+ * Valida que localStorage.lastFileName (sin extension) coincida con la fecha actual dd-mm-yyyy.
+ * Si no coincide, muestra un toast rojo y un modal con opciones de actualizar o continuar.
+ * Esta función asume que existe showMessage(type) y el input #xlsx-upload-hidden en la página.
+ */
+function validateDBDate() {
+  try {
+    const fileName = localStorage.getItem('lastFileName'); // sin extension
+    const today = new Date();
+    const dd = String(today.getDate()).padStart(2, '0');
+    const mm = String(today.getMonth() + 1).padStart(2, '0');
+    const yyyy = today.getFullYear();
+    const expected = `${dd}-${mm}-${yyyy}`;
+
+    const expectedEl = document.getElementById('expected-date');
+    if (expectedEl) expectedEl.textContent = expected;
+
+    // Si no existe lastFileName o no coincide => advertencia
+    if (!fileName || fileName !== expected) {
+      if (typeof showMessage === 'function') {
+        showMessage('La base de datos no coincide con la fecha actual.', 'error');
+      }
+      const modal = document.getElementById('wrong-db-modal');
+      if (modal) {
+        modal.classList.remove('hidden');
+        modal.classList.add('flex');
+
+        const updateBtn = document.getElementById('update-db-btn');
+        const continueBtn = document.getElementById('continue-db-btn');
+        const fileInput = document.getElementById('xlsx-upload-hidden');
+
+        if (updateBtn) {
+          updateBtn.onclick = () => {
+            modal.classList.add('hidden');
+            if (fileInput) fileInput.click();
+          };
+        }
+        if (continueBtn) {
+          continueBtn.onclick = () => {
+            modal.classList.add('hidden');
+          };
+        }
+      }
+    }
+  } catch(e) {
+    console.error('validateDBDate error', e);
+  }
+}
+
+// Hook: Ejecutar la validación al cargar la página y cada vez que se actualice el input file
+document.addEventListener('DOMContentLoaded', function() {
+  setTimeout(function(){
+    if (typeof validateDBDate === 'function') validateDBDate();
+  }, 150);
+
+  const fileInput = document.getElementById('xlsx-upload-hidden');
+  if (fileInput) {
+    fileInput.addEventListener('change', function(){
+      setTimeout(function(){
+        if (typeof validateDBDate === 'function') validateDBDate();
+      }, 400);
+    });
+  }
+});
+</script>
+<!-- FIN: Modal y validación de nombre de XLSX -->
 
 </body>
 </html>
